Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,10 @@
 [access]
 	inheritFrom = All-Projects
+[access "refs/*"]
+	owner = group Administrators
+	create = group t6 maintainers
+	forgeCommitter = group t6 maintainers
+	label-Code-Review = -2..+2 group t6 maintainers
+	label-Verified = -1..+1 group t6 maintainers
+	rebase = group t6 maintainers
+	submit = group t6 maintainers
