Project settings updated

--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 	label-Verified = -1..+1 group t6 maintainers
 	rebase = group t6 maintainers
 	submit = group t6 maintainers
+[submit]
+	action = rebase if necessary
